--- a/html/footer.html
+++ b/html/footer.html
@@ -1,11 +1,11 @@
 <div class="column">
-    <a href="https://www.instagram.com/"><img src="/images/instagram.png" alt="instagram"></a>
+    <a href="https://www.instagram.com/"><img src="../images/instagram.png" alt="instagram"></a>
 </div>
 <div class="column">
-    <a href="https://www.facebook.com/"><img src="/images/facebook.png" alt="faceboo"></a>
+    <a href="https://www.facebook.com/"><img src="../images/facebook.png" alt="faceboo"></a>
 </div>
 <div class="column">
-    <a href="https://twitter.com/"><img src="/images/twitter.png" alt="twitter"></a>
+    <a href="https://twitter.com/"><img src="../images/twitter.png" alt="twitter"></a>
 </div>
 <div class="column">
     <p>Kontakt:</p>
